# orion-nais

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  cli.py  pyproject.toml
docs/: api.rst  conf.py  index.rst
orion/: __init__.py  client.py  historic.py  mmsi.py  urls.py  vessel_codes.py
orion/types/: ais.py
orion/utils/: get_data.py
tests/: make_mock_data.py  test_orion.py  test_orion_historic.py
tests/mocks/: ais_last24h.json  ais_last24h_with_buffer.geojson  area.json  buffer.json  gdf_last24h.geojson  gdf_multiple_ais.geojson  gdf_multiple_ais_no_norwegian.geojson  line_last24h.geojson  oil_installations.geojson  oil_installations_buffer.geojson  simplified_line_last24h.geojson
